--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAztIiU1UbVrG4jeZE1DypvOyFPnHz8sdY</string>
 </resources>
