--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">JajanOn</string>
     <string name="svc">http://192.168.173.1/andropost/</string>
+    <!--<string name="svc">http://gege.esy.es/jajanon/</string>-->
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
     <string name="action_settings">Settings</string>
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAztIiU1UbVrG4jeZE1DypvOyFPnHz8sdY</string>
 </resources>
