Fixing double list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">JajanOn</string>
-    <string name="svc">http://192.168.173.1/andropost/</string>
-    <!--<string name="svc">http://gege.esy.es/jajanon/</string>-->
+    <!--<string name="svc">http://192.168.173.1/andropost/</string>-->
+    <string name="svc">http://gege.esy.es/jajanon/</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
